<?xml version="1.0"?>
<package format="2">
  <name>leuze_rsl_driver</name>
  <version>1.0.1</version>
  <description>ROS Driver for the Leuze RSL series laser scanner. </description>

  <author email="ludovic.delval@ipa.fraunhofer.de">Ludovic Delval</author>
  <author email="harshavardhan.deshpande@ipa.fraunhofer.de">Harshavardhan Deshpande</author>
  <author email="tejas.kumar.shastha@ipa.fraunhofer.de">Tejas Kumar Shastha</author>
  <author email="milan.mraz@leuze.com">Milan Mraz</author>
  <maintainer email="milan.mraz@leuze.com">Milan Mraz</maintainer>

  <license>APACHE2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>leuze_msgs</depend>
  <depend>angles</depend>
  <depend>rosconsole</depend>

  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>roslint</test_depend>

  <export>

  </export>
</package>
